--- a/app/src/main/res/layout/cardview.xml
+++ b/app/src/main/res/layout/cardview.xml
@@ -10,7 +10,7 @@
         android:id="@+id/cardview"
         android:layout_width="300dp"
         android:layout_height="200dp"
-        card_view:cardBackgroundColor="#303069"
+        card_view:cardBackgroundColor="@color/app_theme_color"
         card_view:cardCornerRadius="10dp"
         card_view:cardPreventCornerOverlap="true"
         card_view:cardUseCompatPadding="true"
@@ -34,7 +34,7 @@
         android:layout_marginRight="18dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:gravity="center_vertical">
 
         <TextView
@@ -46,7 +46,7 @@
             android:progress="34"
             android:max="100"
             android:id="@+id/radius"
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
 
@@ -55,7 +55,7 @@
         android:layout_marginRight="18dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:gravity="center_vertical">
 
         <TextView
@@ -67,7 +67,7 @@
             android:progress="34"
             android:max="100"
             android:id="@+id/elevation"
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
 
