--- a/app/src/main/res/layout/recycle_item.xml
+++ b/app/src/main/res/layout/recycle_item.xml
@@ -16,7 +16,7 @@
         >
     <TextView
         android:id="@+id/id_tv"
-        android:layout_width="72dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="center"/>
 
