--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -41,4 +41,14 @@
     <!-- share -->
     <color name="share_background_51">#515151</color>
 
+    <!--Status bar color-->
+    <color name="statusColor">#ff0000</color>
+    <!-- toolBar color -->
+    <color name="toolBarColor">#0000ff</color>
+    <!--EditText,RadioButton,CheckBox color-->
+    <color name="editColor">#FD87A9</color>
+    <!--Window color-->
+    <color name="widowColor">#ffffff</color>
+
+
 </resources>
