--- a/app/src/main/res/layout/ripple_effect.xml
+++ b/app/src/main/res/layout/ripple_effect.xml
@@ -9,4 +9,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Hello World!"/>
+    <Button
+        android:layout_margin="18dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Hello World!"/>
+    <Button
+        android:layout_margin="18dp"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Hello World!"/>
 </LinearLayout>
