--- a/app/src/main/res/layout/recycle_item.xml
+++ b/app/src/main/res/layout/recycle_item.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="72dp"
+    android:layout_height="wrap_content"
     android:layout_margin="3dp">
     <android.support.v7.widget.CardView
         android:id="@+id/cardview"
