--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,13 +16,13 @@
         <!-- 使用 API Level 22以上编译的话，要拿掉前綴字 -->
         <item name="windowNoTitle">true</item>
         <!--colorPrimaryDark对应状态栏的颜色-->
-        <item name="colorPrimaryDark">@color/statusColor</item>
+        <item name="colorPrimaryDark">@color/colorPrimary</item>
         <!--colorPrimary 对应ToolBar的颜色-->
         <item name="colorPrimary">@color/app_theme_color</item>
         <!--colorAccent 对应EditText编辑时、RadioButton选中、CheckBox等选中时的颜色。-->
         <item name="colorAccent">@color/editColor</item>
         <!--窗口的颜色-->
-        <item name="android:windowBackground">@color/widowColor</item>
+        <item name="android:windowBackground">@color/app_theme_color</item>
 
     </style>
 
