--- a/app/src/main/res/layout/md_recycle_view.xml
+++ b/app/src/main/res/layout/md_recycle_view.xml
@@ -7,22 +7,24 @@
     android:background="@color/white">
 
 
-    <!--<android.support.design.widget.AppBarLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content">-->
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
 
-        <!--<android.support.v7.widget.Toolbar-->
-            <!--android:id="@+id/bar"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:background="@color/app_theme_color"-->
-            <!--android:minHeight="?attr/actionBarSize"-->
-            <!--app:layout_scrollFlags="scroll|enterAlways">-->
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/app_theme_color"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:layout_scrollFlags="scroll|enterAlways">
 
-        <!--</android.support.v7.widget.Toolbar>-->
+        </android.support.v7.widget.Toolbar>
 
-    <!--</android.support.design.widget.AppBarLayout>-->
+    </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refrash"
