--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="www.dugaolong.com.androidfive.MainActivity">
+    tools:context="www.dgl.com.androidfive.MainActivity">
 
     <android.support.v7.widget.CardView
         android:layout_width="fill_parent"
