--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -17,4 +17,9 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:text="end"/>
+
+	<TextView
+		android:id="@+id/text"
+		android:layout_width="match_parent"
+		android:layout_height="30dp" />
 </LinearLayout>
